[tool.poetry]
name = "conservative-nlp"
version = "0.1.0"
description = ""
authors = ["ashfinenayet <ashfin.enayet@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
spacy = "^3.3.1"
twint = {git = "https://github.com/twintproject/twint.git", rev = "master"}
ipykernel = "^6.15.1"
nest-asyncio = "^1.5.5"
snscrape = "^0.4.3"
urllib3 = "^1.26.10"
matplot = "^0.1.9"
lib = "^4.0.0"
keras = "^2.9.0"
tensorflow-macos = "^2.9.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
